--- a/src/partials/products.html
+++ b/src/partials/products.html
@@ -1,189 +1,182 @@
-<section class="products">
+<section class="products" id="products">
   <div class="container container-products">
     <p class="products-slogan">100% natural</p>
-        <h2 class="products-title" id="our-product">Products</h2>
+    <h2 class="products-title" id="our-product">Products</h2>
 
-        <ul class="list products-list">
-          <li class="products-gallery products-one">
-            <h3 class="products-gallery-title">ice cream</h3>
-            <div class="products-ellipsis">
-              <div class="products-circle">
-              </div>
-              <div class="products-circle">
-              </div>
-              <div class="products-circle">
-              </div>
-            </div>
+    <ul class="list products-list">
+      <li class="products-gallery products-one">
+        <h3 class="products-gallery-title">ice cream</h3>
+        <div class="products-ellipsis">
+          <div class="products-circle"></div>
+          <div class="products-circle"></div>
+          <div class="products-circle"></div>
+        </div>
 
-            <p class="products-gallery-text ">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-              eiusmod
-              tempor incididunt ut labore et. dolore magna
-              aliqua facilisis.</p>
-            <p class="products-gallery-text-short ">Lorem ipsum dolor sit amet, consectetur adipiscing elit,
-              sed do eiusmod
-              tempor incididunt ut labore et.</p>
-            <a class="products-link" href="http://ice-cream" target="_blank" rel="ice cream" aria-label="ice cream"></a>
+        <p class="products-gallery-text">
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+          eiusmod tempor incididunt ut labore et. dolore magna aliqua facilisis.
+        </p>
+        <p class="products-gallery-text-short">
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+          eiusmod tempor incididunt ut labore et.
+        </p>
+        <a
+          class="products-link"
+          href="http://ice-cream"
+          target="_blank"
+          rel="ice cream"
+          aria-label="ice cream"
+        ></a>
 
-            <picture class="products-foto products-foto-first">
-              <source srcset="
-                  ./images/products/mobile/product-1.png 1x,
-                  ./images/products/mobile/product-1@2x.png 2x" media="(min-width: 320px) and (max-width: 767px)" />
+        <picture class="products-foto products-foto-first">
+          <source
+            srcset="
+              ./images/products/mobile/product-1.png    1x,
+              ./images/products/mobile/product-1@2x.png 2x
+            "
+            media="(min-width: 320px) and (max-width: 767px)"
+          />
 
-              <source srcset="
-                          ./images/products/tablet/product-1.png    1x,
-                          ./images/products/tablet/product-1@2x.png 2x
-                        " media="(min-width: 768px) and (max-width: 1199px)" />
-              <source srcset="
-                          ./images/products/desktop/product-1.png    1x,
-                          ./images/products/desktop/product-1@2x.png 2x
-                        " media="(min-width: 1200px)" />
+          <source
+            srcset="
+              ./images/products/tablet/product-1.png    1x,
+              ./images/products/tablet/product-1@2x.png 2x
+            "
+            media="(min-width: 768px) and (max-width: 1199px)"
+          />
+          <source
+            srcset="
+              ./images/products/desktop/product-1.png    1x,
+              ./images/products/desktop/product-1@2x.png 2x
+            "
+            media="(min-width: 1200px)"
+          />
 
-              <img class="" srcset="
-                    ./images/products/mobile/product-1.png    1x,
-                    ./images/products/mobile/product-1@2x.png 2x
-                  " src="./images/products/mobile/product-1.png" alt="ice cream" />
-            </picture>
+          <img
+            class=""
+            srcset="
+              ./images/products/mobile/product-1.png    1x,
+              ./images/products/mobile/product-1@2x.png 2x
+            "
+            src="./images/products/mobile/product-1.png"
+            alt="ice cream"
+          />
+        </picture>
+      </li>
+      <li class="products-gallery products-two">
+        <h3 class="products-gallery-title">ice coffee</h3>
+        <div class="products-ellipsis">
+          <div class="products-circle"></div>
+          <div class="products-circle"></div>
+          <div class="products-circle"></div>
+        </div>
+        <p class="products-gallery-text">
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+          eiusmod tempor incididunt ut labore et. dolore magna aliqua facilisis.
+        </p>
+        <p class="products-gallery-text-short">
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+          eiusmod tempor incididunt ut labore et.
+        </p>
+        <a
+          class="products-link"
+          href="http://icecoffee"
+          target="_blank"
+          rel="ice coffee"
+          aria-label="ice coffee"
+        ></a>
+        <picture class="products-foto products-foto-second">
+          <source
+            srcset="
+              ./images/products/mobile/product-2.png    1x,
+              ./images/products/mobile/product-2@2x.png 2x
+            "
+            media="(min-width: 320px) and (max-width: 767px)"
+          />
 
-          </li>
-          <li class="products-gallery products-two">
-            <h3 class="products-gallery-title">ice coffee</h3>
-            <div class="products-ellipsis">
-              <div class="products-circle">
-              </div>
-              <div class="products-circle">
-              </div>
-              <div class="products-circle">
-              </div>
-            </div>
-            <p class="products-gallery-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-              eiusmod
-              tempor incididunt ut labore et. dolore magna
-              aliqua facilisis.</p>
-            <p class="products-gallery-text-short">Lorem ipsum dolor sit amet, consectetur adipiscing elit,
-              sed do
-              eiusmod
-              tempor incididunt ut labore et.</p>
-            <a class="products-link" href="http://icecoffee" target="_blank" rel="ice coffee" aria-label="ice coffee"></a>
-            <picture class="products-foto products-foto-second">
-              <source srcset="
-                    ./images/products/mobile/product-2.png 1x,
-                    ./images/products/mobile/product-2@2x.png 2x" media="(min-width: 320px) and (max-width: 767px)" />
+          <source
+            srcset="
+              ./images/products/tablet/product-2.png    1x,
+              ./images/products/tablet/product-2@2x.png 2x
+            "
+            media="(min-width: 768px) and (max-width: 1199px)"
+          />
+          <source
+            srcset="
+              ./images/products/desktop/product-2.png    1x,
+              ./images/products/desktop/product-2@2x.png 2x
+            "
+            media="(min-width: 1200px)"
+          />
 
-              <source srcset="
-                            ./images/products/tablet/product-2.png    1x,
-                            ./images/products/tablet/product-2@2x.png 2x
-                          " media="(min-width: 768px) and (max-width: 1199px)" />
-              <source srcset="
-                            ./images/products/desktop/product-2.png    1x,
-                            ./images/products/desktop/product-2@2x.png 2x
-                          " media="(min-width: 1200px)" />
+          <img
+            class=""
+            srcset="
+              ./images/products/mobile/product-2.png    1x,
+              ./images/products/mobile/product-2@2x.png 2x
+            "
+            src="./images/products/mobile/product-2.png"
+            alt="ice coffee"
+          />
+        </picture>
+      </li>
+      <li class="products-gallery products-three">
+        <h3 class="products-gallery-title">milkshakes</h3>
+        <div class="products-ellipsis">
+          <div class="products-circle"></div>
+          <div class="products-circle"></div>
+          <div class="products-circle"></div>
+        </div>
+        <p class="products-gallery-text">
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+          eiusmod tempor incididunt ut labore et. dolore magna aliqua facilisis.
+        </p>
+        <p class="products-gallery-text-short">
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+          eiusmod tempor incididunt ut labore et.
+        </p>
+        <a
+          class="products-link"
+          href="http://milkshakes"
+          target="_blank"
+          rel="milkshakes"
+          aria-label="milkshakes"
+        ></a>
+        <picture class="products-foto products-foto-third">
+          <source
+            srcset="
+              ./images/products/mobile/product-3.png    1x,
+              ./images/products/mobile/product-3@2x.png 2x
+            "
+            media="(min-width: 320px) and (max-width: 767px)"
+          />
 
-              <img class="" srcset="
-                      ./images/products/mobile/product-2.png    1x,
-                      ./images/products/mobile/product-2@2x.png 2x
-                    " src="./images/products/mobile/product-2.png" alt="ice coffee" />
-            </picture>
+          <source
+            srcset="
+              ./images/products/tablet/product-3.png    1x,
+              ./images/products/tablet/product-3@2x.png 2x
+            "
+            media="(min-width: 768px) and (max-width: 1199px)"
+          />
+          <source
+            srcset="
+              ./images/products/desktop/product-3.png    1x,
+              ./images/products/desktop/product-3@2x.png 2x
+            "
+            media="(min-width: 1200px)"
+          />
 
-          </li>
-          <li class="products-gallery products-three">
-            <h3 class="products-gallery-title">milkshakes</h3>
-            <div class="products-ellipsis">
-              <div class="products-circle">
-              </div>
-              <div class="products-circle">
-              </div>
-              <div class="products-circle">
-              </div>
-            </div>
-            <p class="products-gallery-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-              eiusmod
-              tempor incididunt ut labore et. dolore magna
-              aliqua facilisis.</p>
-            <p class="products-gallery-text-short">Lorem ipsum dolor sit amet, consectetur adipiscing elit,
-              sed do
-              eiusmod
-              tempor incididunt ut labore et.</p>
-            <a class="products-link" href="http://milkshakes" target="_blank" rel="milkshakes" aria-label="milkshakes"></a>
-            <picture class="products-foto products-foto-third">
-              <source srcset="
-                         ./images/products/mobile/product-3.png 1x,
-                          ./images/products/mobile/product-3@2x.png 2x"
-                media="(min-width: 320px) and (max-width: 767px)" />
-
-              <source srcset="
-                           ./images/products/tablet/product-3.png    1x,
-                           ./images/products/tablet/product-3@2x.png 2x
-                            " media="(min-width: 768px) and (max-width: 1199px)" />
-              <source srcset="
-                            ./images/products/desktop/product-3.png    1x,
-                          ./images/products/desktop/product-3@2x.png 2x
-                          " media="(min-width: 1200px)" />
-
-              <img class="" srcset="
-                          ./images/products/mobile/product-3.png    1x,
-                          ./images/products/mobile/product-3@2x.png 2x
-                          " src="./images/products/mobile/product-3.png" alt="milkshakes" />
-            </picture>
-          </li>
-        </ul>
-
+          <img
+            class=""
+            srcset="
+              ./images/products/mobile/product-3.png    1x,
+              ./images/products/mobile/product-3@2x.png 2x
+            "
+            src="./images/products/mobile/product-3.png"
+            alt="milkshakes"
+          />
+        </picture>
+      </li>
+    </ul>
   </div>
 </section>
-
-<!--  образец вставки контентного изображения
-  <picture>
-  <source
-    srcset="
-      ./images/products/mobile/product-1.webp    1x,
-      ./images/products/mobile/product-1@2x.webp 2x
-    "
-    media="(min-width: 320px) and (max-width: 767px)"
-    type="image/webp"
-  />
-  <source
-    srcset="
-      ./images/products/tablet/product-1.webp    1x,
-      ./images/products/tablet/product-1@2x.webp 2x
-    "
-    media="(min-width: 768px) and (max-width: 1199px)"
-    type="image/webp"
-  />
-  <source
-    srcset="
-      ./images/products/desktop/product-1.webp    1x,
-      ./images/products/desktop/product-1@2x.webp 2x
-    "
-    media="(min-width: 1200px)"
-    type="image/webp"
-  />
-  <source
-    srcset="
-      ./images/products/mobile/product-1.png    1x,
-      ./images/products/mobile/product-1@2x.png 2x
-    "
-    media="(min-width: 320px) and (max-width: 767px)"
-  />
-  <source
-    srcset="
-      ./images/products/tablet/product-1.png    1x,
-      ./images/products/tablet/product-1@2x.png 2x
-    "
-    media="(min-width: 768px) and (max-width: 1199px)"
-  />
-  <source
-    srcset="
-      ./images/products/desktop/product-1.png    1x,
-      ./images/products/desktop/product-1@2x.png 2x
-    "
-    media="(min-width: 1200px)"
-  />
-  <img
-    class=""
-    srcset="
-      ./images/products/mobile/product-1.png    1x,
-      ./images/products/mobile/product-1@2x.png 2x
-    "
-    src="./images/products/mobile/product-1.png"
-    alt="Описание"
-  />
-</picture> -->
