--- a/src/partials/locations.html
+++ b/src/partials/locations.html
@@ -1,4 +1,4 @@
-<section class="locations">
+<section class="locations" id="locations">
   <div class="container">
     <h2 class="visually-hidden">Найдите нас</h2>
     <div class="locations-card">
