--- a/src/partials/site-nav.html
+++ b/src/partials/site-nav.html
@@ -1,46 +1,77 @@
 <header class="site-nav">
   <div class="container">
     <div class="container-site-nav">
-      <a href="./"><img class="logo-site-nav" src="../src/images/site-nav/logo.png"></a>
+      <a href="./"
+        ><img
+          class="logo-site-nav"
+          src="../src/images/site-nav/logo.png"
+          alt="logo"
+      /></a>
       <ul class="site-nav-list">
-        <li class="site-nav-item"><a href="" class="link-site-nav">Home</a></li>
-        <li class="site-nav-item"><a href="" class="link-site-nav">About us</a></li>
-        <li class="site-nav-item"><a href="" class="link-site-nav">How it’s made?</a></li>
-        <li class="site-nav-item"><a href="" class="link-site-nav">Our products</a></li>
-        <li class="site-nav-item"><a href="" class="link-site-nav">Contact</a></li>
+        <li class="site-nav-item">
+          <a href="./index.html" class="link-site-nav">Home</a>
+        </li>
+        <li class="site-nav-item">
+          <a href="#comments" class="link-site-nav">About us</a>
+        </li>
+        <li class="site-nav-item">
+          <a href="#manufacture" class="link-site-nav">How it’s made?</a>
+        </li>
+        <li class="site-nav-item">
+          <a href="#procucts" class="link-site-nav">Our products</a>
+        </li>
+        <li class="site-nav-item">
+          <a href="page-footer" class="link-site-nav">Contact</a>
+        </li>
       </ul>
-      <button class="btn-site-nav burger-menu-site-nav" data-menu-button aria-expanded="true"> 
+      <button
+        class="btn-site-nav burger-menu-site-nav"
+        data-menu-button
+        aria-expanded="true"
+      >
         <span class="icon-true-site-nav"></span>
         <svg class="icon-false-site-nav" width="17" height="17">
           <use href="../src/images/svg/sprite.svg#icon-close-cross"></use>
         </svg>
       </button>
-      <button class="container-btn-site-nav btn-site-nav-desktop btn-site-nav">
-        <span class="">
-          Buy now
-        </span>
+      <button
+        class="container-btn-site-nav btn-site-nav-desktop btn-site-nav"
+        data-modal-open
+      >
+        <span class=""> Buy now </span>
         <svg class="btn-icon-site-nav" width="14" height="14">
           <use href="../src/images/svg/sprite.svg#icon-bracket-right"></use>
         </svg>
       </button>
       <div class="mobile-nav-site-nav" data-menu>
-        <button class="container-btn-site-nav btn-site-nav">
-          <span >
-            Buy now
-          </span>
-          <svg class="btn-icon-site-nav btn-icon-menu-site-nav" width="14" height="14">
+        <button class="container-btn-site-nav btn-site-nav" data-modal-open>
+          <span> Buy now </span>
+          <svg
+            class="btn-icon-site-nav btn-icon-menu-site-nav"
+            width="14"
+            height="14"
+          >
             <use href="../src/images/svg/sprite.svg#icon-bracket-right"></use>
           </svg>
         </button>
         <ul class="mobile-nav-list">
-          <li class="site-nav-item"><a href="" class="link-mobile-site-nav">Home</a></li>
-          <li class="site-nav-item"><a href="" class="link-mobile-site-nav">About us</a></li>
-          <li class="site-nav-item"><a href="" class="link-mobile-site-nav">How it’s made?</a></li>
-          <li class="site-nav-item"><a href="" class="link-mobile-site-nav">Our products</a></li>
-          <li class="site-nav-item"><a href="" class="link-mobile-site-nav">Contact</a></li>
+          <li class="site-nav-item">
+            <a href="" class="link-mobile-site-nav">Home</a>
+          </li>
+          <li class="site-nav-item">
+            <a href="" class="link-mobile-site-nav">About us</a>
+          </li>
+          <li class="site-nav-item">
+            <a href="" class="link-mobile-site-nav">How it’s made?</a>
+          </li>
+          <li class="site-nav-item">
+            <a href="" class="link-mobile-site-nav">Our products</a>
+          </li>
+          <li class="site-nav-item">
+            <a href="" class="link-mobile-site-nav">Contact</a>
+          </li>
         </ul>
       </div>
-
     </div>
   </div>
   <div class="mobile-nav-site-nav" data-menu>
