--- a/src/partials/modal.html
+++ b/src/partials/modal.html
@@ -1,66 +1,102 @@
-
 <div class="backdrop is-hidden" data-modal>
-    <div class="modal">
+  <div class="modal">
     <!-- Ваш код здесь -->
-        <h2 class="title-modal">your order</h2>
-        <ul class="modal-list">
-            <li class="modal-product-item icecream-item">
-                <form>
-                    <div class="modal-form-container">
-                        <input class="input-modal-checkbox" type="checkbox" name="ice-creame" id="ice-cream">
-                        <label for="ice-cream"><span class="title-modal-product">ice cream</span></label>
+    <h2 class="title-modal">your order</h2>
+    <ul class="modal-list">
+      <li class="modal-product-item icecream-item">
+        <form>
+          <div class="modal-form-container">
+            <input
+              class="input-modal-checkbox"
+              type="checkbox"
+              name="ice-creame"
+              id="ice-cream"
+            />
+            <label for="ice-cream"
+              ><span class="title-modal-product">ice cream</span></label
+            >
+          </div>
+          <div class="modal-form-container">
+            <label for="number" class="label-modal">Amount</label>
+            <input
+              type="number"
+              class="input-modal"
+              name="amount-icecream"
+              id="number"
+              placeholder="1,2,3,4...."
+            />
+          </div>
+        </form>
+      </li>
 
-                    </div>
-                    <div class="modal-form-container">
-                        <label for="number" class="label-modal">Amount</label>
-                        <input type="number" class="input-modal" name="amount-icecream" id="number" placeholder="1,2,3,4....">
-                    </div>
-                </form>
-            </li>
+      <li class="modal-product-item icecoffee-item">
+        <form>
+          <div class="modal-form-container">
+            <input
+              class="input-modal-checkbox"
+              type="checkbox"
+              name="ice-coffee"
+              id="ice-coffee"
+            />
+            <label for="ice-coffee"
+              ><span class="title-modal-product">ice coffee</span></label
+            >
+          </div>
+          <div class="modal-form-container">
+            <label for="number" class="label-modal">Amount</label>
+            <input
+              type="number"
+              class="input-modal"
+              name="amount-icecoffee"
+              id="number"
+              placeholder="1,2,3,4...."
+            />
+          </div>
+        </form>
+      </li>
+      <li class="modal-product-item milkshakes-item">
+        <form>
+          <div class="modal-form-container">
+            <input
+              class="input-modal-checkbox"
+              type="checkbox"
+              name="milkshakes"
+              id="milkshakes"
+            />
+            <label for="milkshakes"
+              ><span class="title-modal-product">milkshakes</span></label
+            >
+          </div>
+          <div class="modal-form-container">
+            <label for="number" class="label-modal">Amount</label>
+            <input
+              type="number"
+              class="input-modal"
+              name="amount-milkshakes"
+              id="number"
+              placeholder="1,2,3,4...."
+            />
+          </div>
+        </form>
+        <!-- <h3 class="title-modal-product"><span>milkshakes</span></h3> -->
+      </li>
+    </ul>
+    <div class="border-line"></div>
+    <div class="price">
+      <b>Price:</b>
+      <span>0$</span>
+    </div>
+    <button class="modal-button-pay">
+      <span class="modal-pay-text">pay</span>
+    </button>
 
-            <li class="modal-product-item  icecoffee-item">
-                <form>
-                    <div class="modal-form-container">
-                        <input class="input-modal-checkbox" type="checkbox" name="ice-coffee" id="ice-coffee">
-                        <label for="ice-coffee"><span class="title-modal-product">ice coffee</span></label>
+    <button class="close-btn" data-modal-close>
+      <svg class="close-icon">
+        <use href="../src/images/svg/sprite.svg#icon-circle"></use>
+      </svg>
+    </button>
 
-                    </div>
-                    <div class="modal-form-container">
-                        <label for="number" class="label-modal">Amount</label>
-                        <input type="number" class="input-modal" name="amount-icecoffee" id="number" placeholder="1,2,3,4....">
-                    </div>
-                </form>            
-            </li>
-            <li class="modal-product-item milkshakes-item">
-                <form>
-                    <div class="modal-form-container">
-                        <input class="input-modal-checkbox" type="checkbox" name="milkshakes" id="milkshakes">
-                        <label for="milkshakes"><span class="title-modal-product">milkshakes</span></label>
-
-                    </div>
-                    <div class="modal-form-container">
-                        <label for="number" class="label-modal">Amount</label>
-                        <input type="number" class="input-modal" name="amount-milkshakes" id="number" placeholder="1,2,3,4....">
-                    </div>
-                </form>   
-                <!-- <h3 class="title-modal-product"><span>milkshakes</span></h3> -->
-            </li>        
-        </ul>
-        <div class="border-line"></div>
-        <div class="price">
-            <b>Price:</b>
-            <span>0$</span>
-        </div>
-        <button class="modal-button-pay"><span class="modal-pay-text">pay</span></button>
-
-        <button class="close-btn" data-modal-close>
-            <svg class="close-icon">
-                <use href="../src/images/svg/sprite.svg#icon-circle"</use>
-                    
-            </svg>
-        </button>
-
-        <!-- <form>
+    <!-- <form>
             <div class="modal-blocks">
                 <label for="name" class="form-label">Имя</label>
                 <input type="text" class="form-input" name="user-name" id="name">
@@ -98,7 +134,7 @@
 
         </form> -->
 
-        <!-- <button class="close-btn" data-modal-close>
+    <!-- <button class="close-btn" data-modal-close>
             <svg class="close-icon">
                 <use href="./images/symbol-defs.svg#icon-close-black"></use>
                     
