корректирует разметку, добавляет id

--- a/src/partials/comments.html
+++ b/src/partials/comments.html
@@ -1,4 +1,4 @@
-<section class="comments">
+<section class="comments" id="comments">
   <div class="container">
     <div class="comments-container">
       <h2 class="visually-hidden">Slider</h2>
@@ -65,11 +65,12 @@
             </div>
           </div>
           <!-- your content -->
-          <div class="comment-dots">
-            <div class="dot"></div>
-            <div class="dot"></div>
-            <div class="dot"></div>
-          </div>
+          <ul class="comment-dots">
+            <li class="dot"></li>
+            <li class="dot"></li>
+            <li class="dot"></li>
+          </ul>
+          
           <!-- your content -->
           <div class="comment-local">Emily, Los Angeles</div>
         </div>
@@ -135,11 +136,11 @@
             </div>
           </div>
           <!-- your content -->
-          <div class="comment-dots">
-            <div class="dot"></div>
-            <div class="dot"></div>
-            <div class="dot"></div>
-          </div>
+          <ul class="comment-dots">
+            <li class="dot"></li>
+            <li class="dot"></li>
+            <li class="dot"></li>
+          </ul>
           <!-- your content -->
           <div class="comment-local">Jessica, California</div>
         </div>
@@ -204,11 +205,11 @@
             </div>
           </div>
           <!-- your content -->
-          <div class="comment-dots">
-            <div class="dot"></div>
-            <div class="dot"></div>
-            <div class="dot"></div>
-          </div>
+          <ul class="comment-dots">
+            <li class="dot"></li>
+            <li class="dot"></li>
+            <li class="dot"></li>
+          </ul>
           <!-- your content -->
           <div class="comment-local">Lisa, New York</div>
         </div>
