--- a/src/sass/_modal.scss
+++ b/src/sass/_modal.scss
@@ -5,6 +5,7 @@
   transform: translate(-50%, -50%) scale(1);
   border-radius: 24px;
   background-color: $white;
+  z-index: 2000;
   // width: 250px;
   // height: 400px;
 
