исправляет оригинальные стили в инпутах модалки

--- a/src/partials/modal.html
+++ b/src/partials/modal.html
@@ -9,7 +9,7 @@
             <input
               class="input-modal-checkbox"
               type="checkbox"
-              name="ice-creame"
+              name="ice-cream"
               id="ice-cream"
             />
             <label for="ice-cream"
@@ -17,13 +17,13 @@
             >
           </div>
           <div class="modal-form-container">
-            <label for="number" class="label-modal">Amount</label>
+            <label for="amount-icecream" class="label-modal">Amount</label>
             <input
               type="number"
               class="input-modal"
               name="amount-icecream"
-              id="number"
-              placeholder="1,2,3,4...."
+              id="amount-icecream"
+              placeholder="1"
             />
           </div>
         </form>
@@ -43,13 +43,13 @@
             >
           </div>
           <div class="modal-form-container">
-            <label for="number" class="label-modal">Amount</label>
+            <label for="amount-icecoffee" class="label-modal">Amount</label>
             <input
               type="number"
               class="input-modal"
               name="amount-icecoffee"
-              id="number"
-              placeholder="1,2,3,4...."
+              id="amount-icecoffee"
+              placeholder="1"
             />
           </div>
         </form>
@@ -68,17 +68,16 @@
             >
           </div>
           <div class="modal-form-container">
-            <label for="number" class="label-modal">Amount</label>
+            <label for="amount-milkshakes" class="label-modal">Amount</label>
             <input
               type="number"
               class="input-modal"
               name="amount-milkshakes"
-              id="number"
-              placeholder="1,2,3,4...."
+              id="amount-milkshakes"
+              placeholder="1"
             />
           </div>
         </form>
-        <!-- <h3 class="title-modal-product"><span>milkshakes</span></h3> -->
       </li>
     </ul>
     <div class="border-line"></div>
@@ -95,50 +94,5 @@
         <use href="../src/images/svg/sprite.svg#icon-circle"></use>
       </svg>
     </button>
-
-    <!-- <form>
-            <div class="modal-blocks">
-                <label for="name" class="form-label">Имя</label>
-                <input type="text" class="form-input" name="user-name" id="name">
-                <svg class="modal-icons-svg">
-                    <use href="./images/symbol-defs.svg#icon-person-black"></use>
-                </svg>
-                
-            </div>
-            <div class="modal-blocks">
-                <label for="tel" class="form-label">Телефон</label>
-                <input type="tel" class="form-input" name="user-tel" id="tel">
-                <svg class="modal-icons-svg">
-                    <use href="./images/symbol-defs.svg#icon-phone-black"></use>
-                    
-                </svg>
-            </div>
-            <div class="modal-blocks">
-                <label for="email" class="form-label">Почта</label>
-                <input type="email" class="form-input" name="user-email" id="email">
-                <svg class="modal-icons-svg">
-                    <use href="./images/symbol-defs.svg#icon-email-black"></use>
-                </svg>
-            </div>
-            <div>
-                <label for="message" class="form-label">Комментарий</label>
-                <textarea name="message" class="form-textarea" id="message" cols="30" rows="5" placeholder="Введите текст"></textarea>
-            </div>
-            <div class="modal-blocks">
-                
-                <label for="checkbox" class="check-label"><span>Соглашаюсь с рассылкой и принимаю </span><span class="color-check-text">Условия договора</span></label>
-                <input type="checkbox" class="check-class" name="user-checkbox" id="checkbox">
-                <span class="checkbox-icon"></span>
-            </div>   
-            <button type="submit" class="button-hero"><span class="text-button-hero">Отправить</span></button>            
-
-        </form> -->
-
-    <!-- <button class="close-btn" data-modal-close>
-            <svg class="close-icon">
-                <use href="./images/symbol-defs.svg#icon-close-black"></use>
-                    
-            </svg>
-        </button> -->
   </div>
 </div>
