--- a/src/sass/_modal.scss
+++ b/src/sass/_modal.scss
@@ -5,10 +5,6 @@
   transform: translate(-50%, -50%) scale(1);
   border-radius: 24px;
   background-color: $white;
-  // width: 250px;
-  // height: 400px;
-
-  // transition: transform $time-transition;
 
   @media screen and (min-width: 320px) and (max-width: 1199px) {
     width: 450px;
@@ -151,10 +147,7 @@
   max-width: 100%;
   max-height: 100%;
   width: 18px;
-  // fill: $primary-title-color;
-
-  // height: 18px;
-  // transition: fill $time-transition;
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .price {
@@ -175,10 +168,20 @@
   width: 80%;
   height: 50px;
   display: block;
-  background: #d41342;
+  background: $primary-title-color;
   border-radius: 22px;
   margin: 0 auto;
   margin-bottom: 25px;
+  transition: background 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+
+  &:hover {
+    background: $secondary-accent-color;
+  }
+
+  &:hover .modal-pay-text {
+    color: $primary-title-color;
+  }
 }
 
 .modal-pay-text {
@@ -191,6 +194,6 @@
   text-align: center;
   border: none;
   color: $white;
-
   text-transform: uppercase;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
