--- a/src/partials/site-nav.html
+++ b/src/partials/site-nav.html
@@ -1,3 +1,5 @@
+
+
 <header class="site-nav">
   <div class="container">
     <div class="container-site-nav">
@@ -27,7 +29,7 @@
       <button
         class="btn-site-nav burger-menu-site-nav"
         data-menu-button
-        aria-expanded="true"
+        aria-expanded="false"
       >
         <span class="icon-true-site-nav"></span>
         <svg class="icon-false-site-nav" width="17" height="17">
@@ -37,53 +39,19 @@
       <button
         class="container-btn-site-nav btn-site-nav-desktop btn-site-nav"
         data-modal-open
+        
       >
-        <span class=""> Buy now </span>
+        <span class="" > Buy now </span>
         <svg class="btn-icon-site-nav" width="14" height="14">
           <use href="../src/images/svg/sprite.svg#icon-bracket-right"></use>
         </svg>
       </button>
-      <div class="mobile-nav-site-nav" data-menu>
-        <button class="container-btn-site-nav btn-site-nav" data-modal-open>
-          <span> Buy now </span>
-          <svg
-            class="btn-icon-site-nav btn-icon-menu-site-nav"
-            width="14"
-            height="14"
-          >
-            <use href="../src/images/svg/sprite.svg#icon-bracket-right"></use>
-          </svg>
-        </button>
-        <ul class="mobile-nav-list">
-          <li class="site-nav-item">
-            <a href="./index.html" class="link-mobile-site-nav">Home</a>
-          </li>
-          <li class="site-nav-item">
-            <a href="#comments" class="link-mobile-site-nav">About us</a>
-          </li>
-          <li class="site-nav-item">
-            <a href="#manufacture" class="link-mobile-site-nav"
-              >How it’s made?</a
-            >
-          </li>
-          <li class="site-nav-item">
-            <a href="#procucts" class="link-mobile-site-nav">Our products</a>
-          </li>
-          <li class="site-nav-item">
-            <a href="#page-footer" class="link-mobile-site-nav">Contact</a>
-          </li>
-        </ul>
-      </div>
     </div>
   </div>
   <div class="mobile-nav-site-nav" data-menu>
     <button class="container-btn-site-nav btn-site-nav">
       <span> Buy now </span>
-      <svg
-        class="btn-icon-site-nav btn-icon-menu-site-nav"
-        width="14"
-        height="14"
-      >
+      <svg class="btn-icon-site-nav btn-icon-menu-site-nav" width="14" height="14">
         <use href="../src/images/svg/sprite.svg#icon-bracket-right"></use>
       </svg>
     </button>
@@ -106,6 +74,9 @@
     </ul>
   </div>
 </header>
+
+
+
 
 <!--  образец вставки контентного изображения
   <picture>
