--- a/src/sass/config/_color-scheme.scss
+++ b/src/sass/config/_color-scheme.scss
@@ -32,6 +32,7 @@ $smallcircle-decor-color: #c7133e;
 $largecircle-decor-color: #d9d9d9;
 $home-decor-color: #d31342;
 $alternate-bg-color: #fafafa;
+$alternate-bg-col: #FDFDFD;
 
 // дополнительные цвета для секции "products" и "location"
 $primary-overlay-decor-color: #f0d1a5;
