--- a/src/sass/_products.scss
+++ b/src/sass/_products.scss
@@ -1,3 +1,7 @@
+.products {
+  background-color: #e5e5e5;
+}
+
 .container-products {
   background-color: $white;
   padding-top: 121px;
@@ -32,7 +36,7 @@
     line-height: 1.15;
   }
 
-   @media screen and (min-width: 1200px) {
+  @media screen and (min-width: 1200px) {
     font-size: 30px;
     line-height: 1.13;
   }
@@ -81,7 +85,7 @@
   background-color: $header-bg-color;
   color: $white;
   border-radius: 24px;
-  
+
   padding-left: 41px;
   padding-right: 39px;
 
@@ -91,7 +95,7 @@
 
   @media screen and (min-width: 768px) {
     width: calc((100% - 20px) / 3);
-    
+
     margin-bottom: 0;
     padding-top: 152px;
     padding-bottom: 40px;
@@ -139,58 +143,48 @@
   @media screen and (min-width: 768px) {
     width: auto;
     right: 0px;
-
-    
   }
-
-  
 }
 
 @media screen and (min-width: 768px) {
   .products-foto-first {
-      height: 226px;
-      top: -104px;
-    }
+    height: 226px;
+    top: -104px;
+  }
 
-    .products-foto-second {
-      height: 233px;
-      top: -111px;
-    }
+  .products-foto-second {
+    height: 233px;
+    top: -111px;
+  }
 
-    .products-foto-third {
-      height: 224px;
-      top: -102px;
-    }
-
+  .products-foto-third {
+    height: 224px;
+    top: -102px;
+  }
 }
-
-
 
 @media screen and (min-width: 1200px) {
   .products-foto-first {
-      width: 335px;
-      height: 335px;
-      top: -210px;
-      right: -5px;
-      
-    }
-
-    .products-foto-second {
-      width: 337px;
-      height: 335px;
-      top: -210px;
-      right: -5px;
-      
-    }
-
-    .products-foto-third {
-      width: 335px;
-      height: 335px;
-      top: -210px;
-      right: -5px;
-    }
-
+    width: 335px;
+    height: 335px;
+    top: -210px;
+    right: -5px;
   }
+
+  .products-foto-second {
+    width: 337px;
+    height: 335px;
+    top: -210px;
+    right: -5px;
+  }
+
+  .products-foto-third {
+    width: 335px;
+    height: 335px;
+    top: -210px;
+    right: -5px;
+  }
+}
 
 .products-gallery-title {
   margin: 0;
@@ -203,18 +197,15 @@
   letter-spacing: 0.04em;
 
   @media screen and (min-width: 768px) {
-  margin-bottom: 30px;
-  line-height: 1.16;
-  
+    margin-bottom: 30px;
+    line-height: 1.16;
   }
 
   @media screen and (min-width: 1200px) {
     font-size: 30px;
-  line-height: 1.13;
-  margin-bottom: 32px;
+    line-height: 1.13;
+    margin-bottom: 32px;
   }
-
-
 }
 
 .products-gallery-text {
@@ -228,7 +219,6 @@
   @media screen and (min-width: 767px) {
     display: none;
   }
-  
 }
 
 @media screen and (max-width: 767px) {
@@ -248,59 +238,46 @@
     line-height: 1.78;
     letter-spacing: 0.04em;
     text-align: center;
-
-
-    
   }
 }
 
 @media screen and (min-width: 1200px) {
-    .products-gallery-text-short{
-      
-      font-weight: bold;
-      font-size: 16px;
-      line-height: 1.69;
-      letter-spacing: 0.04em;
-
-    
-
-    }
+  .products-gallery-text-short {
+    font-weight: bold;
+    font-size: 16px;
+    line-height: 1.69;
+    letter-spacing: 0.04em;
+  }
 }
 
 .products-link {
   background-image: url(../images/products/arrow-right.jpg);
-    width: 40px;
-      height: 40px;
-      background-color: $white;
-      border-radius: 50%;
-      background-size: 40px 40px;
-      background-repeat: no-repeat;
-      background-position: center;
-      margin-top: 30px;
-      margin-left: auto;
-      margin-right: auto;
+  width: 40px;
+  height: 40px;
+  background-color: $white;
+  border-radius: 50%;
+  background-size: 40px 40px;
+  background-repeat: no-repeat;
+  background-position: center;
+  margin-top: 30px;
+  margin-left: auto;
+  margin-right: auto;
 
-      &:hover,
-      &:focus {
-        
-        border: 1px solid $primary-title-color;
-        outline: 1px $primary-title-color;
-        cursor: pointer;
-        
-      }
+  &:hover,
+  &:focus {
+    border: 1px solid $primary-title-color;
+    outline: 1px $primary-title-color;
+    cursor: pointer;
+  }
 
-      @media screen and (min-width: 768px) {
-       margin-top: 40px; 
-      }
+  @media screen and (min-width: 768px) {
+    margin-top: 40px;
+  }
 
-      @media screen and (min-width: 1200px) {
-        margin-top: 62px;
-      }
-
+  @media screen and (min-width: 1200px) {
+    margin-top: 62px;
+  }
 }
-
-
-
 
 .products-ellipsis {
   display: flex;
@@ -311,7 +288,6 @@
   @media screen and (min-width: 1200px) {
     margin-bottom: 32px;
   }
-
 }
 
 .products-circle {
