--- a/src/partials/locations.html
+++ b/src/partials/locations.html
@@ -12,11 +12,11 @@
           <ul class="locations-work-list">
             <li>
               <h3 class="locations-workdays">Monday - Friday</h3>
-              <time class="locations-worktime">06:00 AM - 10:00 PM</time>
+              <span class="locations-worktime">06:00 AM - 10:00 PM</span>
             </li>
             <li>
               <h3 class="locations-workdays">Saturday - Sunday</h3>
-              <time class="locations-worktime">08:00 AM - 16:00 PM</time>
+              <span class="locations-worktime">08:00 AM - 16:00 PM</span>
             </li>
           </ul>
           <ul class="locations-contact-list">
@@ -33,11 +33,11 @@
           <ul class="locations-work-list">
             <li>
               <h3 class="locations-workdays">Monday - Friday</h3>
-              <time class="locations-worktime">06:00 AM - 10:00 PM</time>
+              <span class="locations-worktime">06:00 AM - 10:00 PM</span>
             </li>
             <li>
               <h3 class="locations-workdays">Saturday - Sunday</h3>
-              <time class="locations-worktime">08:00 AM - 16:00 PM</time>
+              <span class="locations-worktime">08:00 AM - 16:00 PM</span>
             </li>
           </ul>
           <ul class="locations-contact-list">
@@ -54,11 +54,11 @@
           <ul class="locations-work-list">
             <li>
               <h3 class="locations-workdays">Monday - Friday</h3>
-              <time class="locations-worktime">06:00 AM - 10:00 PM</time>
+              <span class="locations-worktime">06:00 AM - 10:00 PM</span>
             </li>
             <li>
               <h3 class="locations-workdays">Saturday - Sunday</h3>
-              <time class="locations-worktime">08:00 AM - 16:00 PM</time>
+              <span class="locations-worktime">08:00 AM - 16:00 PM</span>
             </li>
           </ul>
           <ul class="locations-contact-list">
@@ -69,18 +69,21 @@
       </ul>
     </div>
     <div class="locations-button-group">
-      <button type="button" class="locations-button">
+      <a href="https://www.google.com.ua/?hl=ru" class="locations-button">
         Our Locations
         <svg class="location-button-icon">
           <use href="./images/svg/sprite.svg#icon-bracket-right"></use>
         </svg>
-      </button>
-      <button type="button" class="locations-button locations-franchise">
+      </a>
+      <a
+        href="https://www.google.com.ua/?hl=ru"
+        class="locations-button locations-franchise"
+      >
         Franchise
         <svg class="location-button-icon location-button-iconfr">
           <use href="./images/svg/sprite.svg#icon-bracket-right"></use>
         </svg>
-      </button>
+      </a>
     </div>
   </div>
 </section>
