--- a/src/sass/_locations.scss
+++ b/src/sass/_locations.scss
@@ -356,7 +356,7 @@ p {
     &:hover,
     &:focus {
       background-color: $secondary-accent-color;
-      transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+      transition: background-color $trans-duration $trans-function;
     }
   }
   &.locations-button:hover,
