добавил aria-controls

--- a/src/partials/site-nav.html
+++ b/src/partials/site-nav.html
@@ -30,6 +30,7 @@
         class="btn-site-nav burger-menu-site-nav"
         data-menu-button
         aria-expanded="false"
+        aria-controls="mobile-nav-site-nav"
       >
         <span class="icon-true-site-nav"></span>
         <svg class="icon-false-site-nav" width="17" height="17">
