добавил aria-controls#2

--- a/src/partials/site-nav.html
+++ b/src/partials/site-nav.html
@@ -49,7 +49,7 @@
       </button>
     </div>
   </div>
-  <div class="mobile-nav-site-nav" data-menu>
+  <div class="mobile-nav-site-nav" data-menu id="mobile-nav-site-nav">
     <button class="container-btn-site-nav btn-site-nav">
       <span> Buy now </span>
       <svg class="btn-icon-site-nav btn-icon-menu-site-nav" width="14" height="14">
